shawk/awk/rdpg/src/compiler/parser/tests/accept/bad_first.txt
error: grammars/bad_first.rdpg:1:5
unexpected: 'terminal' with value 'START'
  expected: 'EOI', 'start' 
    1 | START : foo EOI ;
      | ^
